Database and tables "Products", "Categories" and "Products_Categories" were added.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /ShapeAreaForInternship/DatabaseProject_log.ldf
+/ShapeAreaForInternship/DatabaseProject.mdf
